--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,271 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&display=swap');
+:root {
+  --tripadvisorColor:  #00aa6c;
+  --Text_Font: 'Titillium Web', sans-serif;
+  --Dark:#2B4252;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{text-align: left;
+padding: 0;
+margin: 0;
+font-family: var(--Text_Font);}
+html{
+  max-width:100vw;
+  overflow:hidden;
 }
+.pointer{
+  cursor: pointer;
+}
+.App{
+  width: 100vw;
+  height:fit-content;
+  max-width:100vw;
+  overflow:hidden;
+}
+.SliderMainContainer{
+width: 100vw;
+height: fit-content;
+overflow: hidden;
+position: relative;
+display: grid;
+grid-template-rows: auto;
+}
+.Backwards, .Forwards{
+  height: 10%;
+  width: auto;
+fill:var(--Dark);
+font-weight: bold;
+cursor: pointer;
+z-index: 500;
+}
+.Backwards:hover, .Forwards:hover {
+  fill: var(--tripadvisorColor);
+}
+.navContainer{
+position: absolute;
+  grid-row: 2;
+  left: 50vw;
+  transform: translateX(-50%);
+  display: flex;
+  flex-direction: row;
+}
+.Navigation{
+  margin-left: 0.2rem;
+  margin-right: 0.2rem;
+  display: block;
+  background-color: var(--Dark);
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.active{
+  background-color: var(--tripadvisorColor);
+}
+.Backwards{
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translate(25%, -50%);
+}
+.Forwards{
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translate(-25%, -50%);
+}
+
+.SliderSlidingContainer{
+grid-row: 1;
+display: grid;
+grid-template-columns: auto;
+grid-template-rows: auto;
+width: fit-content;
+transition: all 0.5s ease-out;
+}
+
+.ReviewContainer{
+  box-sizing: border-box;
+  grid-row: 1;
+  padding-top: 10px;
+  padding-bottom: 20px;
+padding-left: 5vw;
+padding-right: 5vw;
+  display: flex;
+  flex-direction: column;
+  width: calc(100vw/3);
+  height: fit-content;
+}
+/* .ReviewContainer:first-of-type{
+  margin-left: 10vw;
+}
+.ReviewContainer:nth-child(3n) {
+  margin-right: 10vw;
+} */
+.reviewBall:first-of-type{
+  margin-left:0;
+}
+.location *{
+  font-size: small;
+  padding: 0;
+}
+.flexRow{
+  display: flex;
+  flex-direction: row;
+}
+.reviewImg{
+  display: block;
+background-color: var(--tripadvisorColor);
+  height: 75px;
+  width: 75px;
+  border-radius: 50%;
+  margin-right: 1rem;
+  text-align: center;
+  position: relative;
+}
+.reviewImg::after{
+  content:""
+}
+.ReviewImage_0{
+  background-image: url(./components/images/1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.ReviewImage_1{
+  background-image: url(./components/images/2.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.ReviewImage_2{
+  background-image: url(./components/images/3.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.ReviewImage_3{
+  background-image: url(./components/images/4.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.ReviewImage_4{
+  background-image: url(./components/images/5.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.ReviewImage_5{
+  background-image: url(./components/images/6.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.ReviewImage_6{
+  background-image: url(./components/images/7.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+
+.namePlusLocation{
+  display: flex;
+  flex-direction: column;
+}
+.imgNameLocation{
+  display: flex;
+  flex-direction: row;
+}
+.location, .name {
+  display: flex;
+  flex-direction: column;
+}
+.reviewName{
+  font-size: 1rem;
+}
+.name *{
+  padding-bottom: 0;
+}
+.strong{
+  font-weight: 700;
+}
+.dotBefore::before{
+  content: " • ";
+}
+.title{
+  font-size: large;
+  padding-bottom: 5px;
+}
+.dateOfExperience{
+  padding-top: 5px;
+}
+.locationCSSIcon::before{
+content: "📍 ";
+}
+.ratingPlusTitleAndText{
+  margin-top: 1rem;
+}
+.ratingContainer{
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 0.5rem;
+}
+.reviewBall{
+  display: block;
+  height: 20px;
+  width: 20px;
+  margin-left: 5px;
+  margin-right: 5px;
+  border-radius: 50%;
+background-color:var(--tripadvisorColor);
+}
+.reviewBall:first-of-type{
+  margin-left:0;
+}
+
+.logo{
+  grid-row: 3;
+  grid-column: 1;
+  bottom:0;
+  left: 0;
+  margin: 1rem;
+  margin-bottom: 10px;
+  height: 50px;
+  width: auto;
+}
+
+
+@media only screen and (max-width: 1200px) {
+  .Backwards, .Forwards{
+      height: 5%;
+  }
+  .logo{
+      height: 50px;
+  }
+  .ReviewContainer{
+      margin-left: 10vw;
+      margin-right: 10vw;
+      margin-top: 5vw;
+      margin-bottom: 5vh;
+      width: 80vw;
+  }
+  .ReviewContainer:first-of-type{
+      margin-left: 10vw;
+  }
+  .ReviewContainer:nth-child(3n) {
+      margin-right: 10vw;
+  }
+  .reviewBall:first-of-type{
+      margin:0;
+  }
+}
+@media only screen and (max-width: 600px) {
+.Backwards{
+  display: none!important;
+}
+.Forwards{
+display: none!important;
+}}
